updated checks folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     },
     "include": [
         "*/*.ts",
-        "support/utils/checks.ts"
+        "support/utils/checks/checks.ts"
         ]
 }
